--- a/package.json
+++ b/package.json
@@ -12,23 +12,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.1.3",
-    "@angular/cdk": "^2.0.0-beta.8",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/flex-layout": "^2.0.0-beta.8",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/material": "^2.0.0-beta.8",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "core-js": "^2.4.1",
+    "@angular/animations": "^4.3.6",
+    "@angular/cdk": "^2.0.0-beta.10",
+    "@angular/common": "^4.3.6",
+    "@angular/compiler": "^4.3.6",
+    "@angular/compiler-cli": "^4.3.6",
+    "@angular/core": "^4.3.6",
+    "@angular/flex-layout": "^2.0.0-beta.9",
+    "@angular/forms": "^4.3.6",
+    "@angular/http": "^4.3.6",
+    "@angular/language-service": "^4.3.6",
+    "@angular/material": "^2.0.0-beta.10",
+    "@angular/platform-browser": "^4.3.6",
+    "@angular/platform-browser-dynamic": "^4.3.6",
+    "@angular/router": "^4.3.6",
+    "@types/node": "^6.0.88",
+    "core-js": "^2.5.1",
     "hammerjs": "^2.0.8",
-    "ngx-clipboard": "^8.0.3",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "karma": "^1.7.1",
+    "ngx-clipboard": "^8.0.4",
+    "rxjs": "^5.4.3",
+    "zone.js": "^0.8.17"
   },
   "devDependencies": {
     "@angular/cli": "1.1.0",
